--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>drew</title>
+    <meta name="keywords" content="drew-personal-website">
+    <meta name="description" content="about-me">
+    <meta name="author" content="Drew-Mayo">
+    <link rel="stylesheet" href="styles.css">
+    <title>My Website</title>
   </head>
   <body>
-<h1>yes</h1>
-<h4>an answer to a question</h4>
+    <header>header</header>
+<h1>This is my personal website</h1>
+<br>
+<h4>Click pizza to go to Dominos</h4>
+<br>
+<div class="pizza">
+<p>I like to eat <a href="https://www.dominos.com/en/">pizza</a></p>
+</div>
+<div>
+  <p>My classes are Art, Geometry, Coding, and English</p>
+</div id="my-classes">
+<footer>footer</footer>
   </body>
 </html>
